Improve LoadSongTest unit tests